--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,21 @@
     </string>
 
     <string name="title_add_wallet">Add Wallet</string>
+    <string name="create_new_key">Create New Wallet</string>
+    <string name="recover_wallet">Recover Wallet</string>
+    <string name="import_bip0032_key">Import BIP-0032 Key</string>
+    <string name="import_text">Import</string>
+    <string name="failed_key_import">Failed to import key</string>
+    <string-array name="derivation_methods">
+        <item>BIP-0044</item>
+        <item>BIP-0032</item>
+        <item>SIMPLE</item>
+    </string-array>
+    <string name="expand_compress">Expand/Compress</string>
+    <string name="send">Send</string>
+    <string name="receive">Receive</string>
+    <string name="history">History</string>
+    <string name="edit">Edit</string>
+    <string name="recent_transactions">Recent Transactions</string>
 
 </resources>
