--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,11 +56,16 @@
     </string>
 
     <string name="title_add_wallet">Add Wallet</string>
+    <string name="add_wallet">Add Wallet</string>
     <string name="create_new_key">Create New Wallet</string>
     <string name="recover_wallet">Recover Wallet</string>
     <string name="import_bip0032_key">Import BIP-0032 Key</string>
+    <string name="title_import_bip0032_key">Enter BIP-0032 Encoded Key</string>
     <string name="import_text">Import</string>
     <string name="failed_key_import">Failed to import key</string>
+    <string name="failed_key_import_format">Invalid key format</string>
+    <string name="failed_key_import_exists">Key already in wallet</string>
+    <string name="failed_key_import_method">Invalid derivation method</string>
     <string-array name="derivation_methods">
         <item>BIP-0044</item>
         <item>BIP-0032</item>
