--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="recover_wallet">Recover Wallet</string>
     <string name="update_wallet">Update Wallet</string>
     <string name="backup_wallet">Backup Wallet</string>
+    <string name="remove_wallet">Remove Wallet</string>
     <string name="import_bip0032_key">Import BIP-0032 Key</string>
     <string name="title_import_bip0032_key">Enter BIP-0032 Encoded Key</string>
     <string name="import_text">Import</string>
@@ -85,5 +86,9 @@
     <string name="no_transactions">No Transactions</string>
     <string name="peers">Peers</string>
     <string name="name">Name</string>
+    <string name="receive_pending">Receive Pending</string>
+    <string name="send_pending">Send Pending</string>
+    <string name="receive_confirmed">Receive Confirmed</string>
+    <string name="send_confirmed">Send Confirmed</string>
 
 </resources>
