Add stop to progress notification.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
     </string>
     <string name="loading_for_synchronize">Loading for synchronize</string>
     <string name="progress_title">Synchronizing</string>
+    <string name="synchronize">Synchronize</string>
+    <string name="stop">Stop</string>
 
     <string name="channel_transactions_name">Transactions</string>
     <string name="channel_transactions_description">
