--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="add_wallet">Add Wallet</string>
     <string name="create_new_key">Create New Wallet</string>
     <string name="recover_wallet">Recover Wallet</string>
-    <string name="update_wallet">Update Wallet</string>
+    <string name="update_name">Update Name</string>
     <string name="backup_wallet">Backup Wallet</string>
     <string name="remove_wallet">Remove Wallet</string>
     <string name="import_bip0032_key">Import BIP-0032 Key</string>
