--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,14 @@
         <item>bits</item>
         <item>bitcoins</item>
     </string-array>
+    <string name="transaction">Transaction</string>
+    <string name="id">ID</string>
+    <string name="inputs">Inputs</string>
+    <string name="input">Input</string>
+    <string name="index">index</string>
+    <string name="outpoint">Outpoint</string>
+    <string name="outputs">Outputs</string>
+    <string name="output">Output</string>
 
     <string name="mnemonic_seed_entropy">Entropy</string>
     <string-array name="mnemonic_seed_length_titles">
