--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,19 +39,19 @@
         synchronize as well.
     </string>
     <string-array name="sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
         <item>1 hour</item>
         <item>3 hours</item>
         <item>6 hours</item>
+        <item>12 hours</item>
+        <item>24 hours</item>
         <item>Never</item>
     </string-array>
     <integer-array name="sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
         <item>60</item>
         <item>180</item>
         <item>360</item>
+        <item>720</item>
+        <item>1440</item>
         <item>-1</item>
     </integer-array>
 
